--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -9,8 +9,8 @@
 	font-weight: normal;
 	src: url('../font/NanumGothic.eot');src: local(※);
 	src: url('../font/NanumGothic.eot?#iefix') format('embedded-opentype'),
-		  url('../font/NanumGothic.woff') format('woff'),
-		  url('../font/NanumGothic.ttf') format('truetype');
+		 url('../font/NanumGothic.woff') format('woff'),
+		 url('../font/NanumGothic.ttf') format('truetype');
 }
 @font-face {
 	font-family: "Nanum Gothic";
@@ -18,8 +18,8 @@
 	font-weight: bold;
 	src: url('../font/NanumGothicBold.eot');src: local(※);
 	src: url('../font/NanumGothicBold.eot?#iefix') format('embedded-opentype'),
-		  url('../font/NanumGothicBold.woff') format('woff'),
-		  url('../font/NanumGothicBold.ttf") format("truetype');
+		 url('../font/NanumGothicBold.woff') format('woff'),
+		 url('../font/NanumGothicBold.ttf") format("truetype');
 }
 
 /* reset.css */
@@ -58,9 +58,9 @@
 	.ellipsis{display:block;width:100%;white-space: nowrap;overflow:hidden;text-overflow:ellipsis;}
 
 /* skip_navigation */
-	#skip_navi {position:absolute;top:0;height:0px;width:100%;z-index:30;}
-	#skip_navi a {display:block; height:1px; width:1px; margin-bottom:-1px; overflow:hidden; text-align:center;color:#fff;white-space:nowrap;;}
-	#skip_navi a:focus, #skip_navi a:active {display:block;top:0;width:100%;height:30px;line-height:30px;background:#555;color:#eee;}
+	#skipToContent {position:absolute;top:0;height:0px;width:100%;z-index:30;}
+	#skipToContent a {display:block; height:1px; width:1px; margin-bottom:-1px; overflow:hidden; text-align:center;color:#fff;white-space:nowrap;;}
+	#skipToContent a:focus, #skipToContent a:active {display:block;top:0;width:100%;height:30px;line-height:30px;background:#555;color:#eee;}
 
 /*form&input base style*/
 	.input-text{display:inline-block;height:18px;line-height:18px;;padding:10px 5px;border:1px solid #e5e5e5;background:#fff;}
