--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -33,6 +33,7 @@
 	input{display:inline-block;*display:inline;border:0;overflow:visible;background:transparent;}
 	button{display:inline-block;*display:inline;padding:0;margin:0;border:0;cursor:pointer;line-height:0;vertical-align:middle;overflow:visible;background:transparent;outline: none;}
 	button::-moz-focus-inner,input::-moz-focus-inner, button:active{border:0;padding:0;outline: none;}
+	select, button{box-sizing: content-box;}
 
 	hr{display:none;}
 	a{text-decoration:none;color:#7e7e7e;font-size:14px}
@@ -79,13 +80,11 @@
 	
 	textarea{display:block;border:1px solid #e5e5e5;padding:5px 3px}
 	textarea[size="100"]{width:99%}
-	select{padding:1px;margin:0;height:3em;border:1px solid #e5e5e5;color:#666666;background:transparent;}
+	select{height:2em;line-height:1em;padding:0.5em;margin:0;border:1px solid #e5e5e5;color:#666666;background:transparent;}
 	select[width="5"]{width:50px}
 	select[width="10"]{width:100px}
 	select[width="20"]{width:200px}
 
-	.ie8 select{height:3.1em;padding:9px 0}
-	
 	.chk_area .tit{display:inline-block;padding:0 .5em;cursor:pointer;}
 	.chk_area > input{display:none}
 	.chk_area > label{display:inline-block;border:1px solid #eee;height:2em;width:2em;vertical-align:middle;background:#fff;}
@@ -104,15 +103,15 @@
 	.ui-datepicker {position:absolute;z-index:100 !important;width:20em;padding: .5em;display: none;background:#fff;border:1px solid #ccc;box-shadow:1px 1px 15px #aaa}
 	.ui-datepicker .ui-datepicker-title{margin:0 20px}
 	.ui-datepicker-trigger{border:1px solid #eee;border-radius:5px;background:#efefef;height:3em;padding:0 .5em}
-	.ui-datepicker .ui-datepicker-title select{height:30px;vertical-align:middle;margin:0}
+
 	.ui-datepicker .ui-datepicker-header {position: relative;padding: .2em 0;}
 	.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next {position:absolute;top:5px;width:1.7em;height: 1.7em;text-indent:-99999px;border:1px solid #ccc;border-radius:3px}
 	.ui-datepicker .ui-datepicker-prev {left:2px;background:url(images/datepicker_prev.png) 50% 50% no-repeat;}
 	.ui-datepicker .ui-datepicker-next {right:2px;background:url(images/datepicker_next.png) 50% 50% no-repeat;}
 	.ui-datepicker .ui-datepicker-prev span,.ui-datepicker .ui-datepicker-next span {overflow:hidden;display: block;position: absolute;left: 50%;margin-left: -8px;top: 50%;margin-top: -8px;}
 	.ui-datepicker .ui-datepicker-title {margin: 0 2.3em;line-height: 1.8em;text-align: center;}
-	.ui-datepicker .ui-datepicker-title select {font-size: 1em;margin: 1px 0;vertical-align:middle}
-	.ui-datepicker select.ui-datepicker-month, .ui-datepicker select.ui-datepicker-year {margin:0 1px;border-radius:5px;width: 40%;}
+
+	.ui-datepicker select{vertical-align:middle;height:2em;padding:.3em;margin:0 1px;border-radius:5px;width: 40%;}
 	.ui-datepicker table {width: 100%;font-size: .9em;border-collapse: collapse;margin: 0 0 .4em;}
 	.ui-datepicker th {padding: .7em .3em;text-align: center;font-weight: bold;border: 0;}
 	.ui-datepicker td {border: 0;padding: 1px;}
