--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -58,7 +58,7 @@
 	/*ellipsis*/
 	.ellipsis{display:block;width:100%;white-space: nowrap;overflow:hidden;text-overflow:ellipsis;}
 
-	/* skip_navigation */
+	/* skipToContent */
 	#skipToContent {position:absolute;top:0;height:0px;width:100%;z-index:30;}
 	#skipToContent a {display:block; height:1px; width:1px; margin-bottom:-1px; overflow:hidden; text-align:center;color:#fff;white-space:nowrap;;}
 	#skipToContent a:focus, #skipToContent a:active {display:block;top:0;width:100%;height:30px;line-height:30px;background:#555;color:#eee;}
